# VibeMiner

./: .gitignore  README.md  package-lock.json  package.json
.github/scripts/: generate-updater-latest.mjs  set-tauri-release-version.mjs
.github/workflows/: boing-testnet-pin-check.yml  ci.yml  deploy-cloudflare.yml  release-desktop.yml
apps/desktop/: main.js  mining-service.js  node-service.js  package.json  preload.js
apps/desktop/scripts/: generate-icons.js
apps/tauri/: .gitignore  README.md  package.json
apps/tauri/scripts/: prepare-frontend-dist.cjs
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/icons/: icon.icns
apps/tauri/src-tauri/permissions/: allow-vibeminer-ipc.json
apps/tauri/src-tauri/src/: lib.rs  main.rs  mining.rs  node.rs  settings.rs  tunnel.rs
apps/web/: .env.example  next.config.js  package.json  tailwind.config.ts  wrangler.toml
apps/web/d1/: schema.sql
apps/web/public/: desktop-bridge.js  tauri-bridge.js
apps/web/scripts/: build-brand-assets.cjs  d1-ensure-node-presets-json.mjs  opennext-clean.mjs  (+1 more)
docs/: BOING_QA_RPC_AND_RELEASES.md  BOING_REGISTRATION_CHECKLIST.md  BOING_TESTNET_PIN_SYNC.md  CLOUDFLARE_SETUP.md  DESKTOP_APP.md  MINING_INTEGRATION.md  NETWORK_ONBOARDING.md  NODE_RUNNING.md  SEO_AND_BRANDING.md  TRUST_AND_NEXT_STEPS.md  USER_WALLETS_AND_ADMIN.md  VERCEL.md  WINDOWS_CODE_SIGNING.md
scripts/: check-boing-testnet-pin.mjs  print-boing-testnet-zip-shas.mjs  run-vibeminer-with-local-boing-node.cmd  run-vibeminer-with-local-boing-node.ps1
(+126 files in other folders)
